bpy.ops.object.duplicates_make_real: use_hierarchy parameter doesn't work as expected #42838

Closed
opened 2014-12-08 11:29:59 +01:00 by Fabian Emmes · 5 comments

System Information
Archlinux, Intel Core i5, Sandy-Bridge

Blender Version
Broken: 2.72b and current master (3e7e97f1)
Worked: (optional)

Short description of error
bpy.ops.object.duplicates_make_real(use_hierarchy=True) doesn't restore the parent/child relationship.

Exact steps for others to reproduce the error
In duplicates_make_real_hierarchy.blend, confirm the command written in the python console.
Result: The two cubes are instantiated, but are not connected.
Expected result: The upper cube should have the lower cube as its parent.

**System Information** Archlinux, Intel Core i5, Sandy-Bridge **Blender Version** Broken: 2.72b and current master (3e7e97f1) Worked: (optional) **Short description of error** bpy.ops.object.duplicates_make_real(use_hierarchy=True) doesn't restore the parent/child relationship. **Exact steps for others to reproduce the error** In [duplicates_make_real_hierarchy.blend](https://archive.blender.org/developer/F130306/duplicates_make_real_hierarchy.blend), confirm the command written in the python console. Result: The two cubes are instantiated, but are not connected. Expected result: The upper cube should have the lower cube as its parent.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @der_fab

Added subscriber: @der_fab
Campbell Barton self-assigned this 2014-12-08 15:09:23 +01:00

This issue was referenced by 252bfc6f65

This issue was referenced by 252bfc6f65564185aa3b3b9849cc6c486f4c3e78

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 252bfc6f65.

Closed by commit 252bfc6f65.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42838
No description provided.