Fix T42838: Make dupli's real use_hierarchy fails

Regression since the dupli-object refactor.